--- a/icon.css
+++ b/icon.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Raleway&display=swap');
+@import url('https://pvinis.github.io/iosevka-webfont/3.4.1/iosevka.css');
 /*自定义标签 测试*//*自定义标签 世界观*/
 :is(a[data-ref="世界观"],.page-title-sizer-wrapper span[data-ref="世界观"]){
   position: relative;
